# VK_Internship

./: CMakeLists.txt  README.md  _build.cmd  _tests.cmd
include/: VK_Storage.h  VK_Storage.ipp
src/: VK_Storage.ipp  main.cpp
tests/: CMakeLists.txt  tests_vk_storage.cpp
